<resources>
    <string name="app_name">CleverTap Custom Templates</string>
    <string name="view_product">View Product</string>
    <string name="sdk_not_initialized">Clevertap SDK not initialized</string>
    <string name="event_trigger_failed">Event Trigger Failed</string>
    <string name="profile_update_failed">Profile Update Failed</string>
    <string name="channel_not_created">Channel not created</string>
    <string name="on_user_login">OnUserLogin</string>
    <string name="profile_push">Profile Push</string>
    <string name="push_message">Push Message</string>
    <string name="in_app_message">In App</string>
    <string name="native_display_button">Native Disp</string>
    <string name="app_inbox">App Inbox</string>
    <string name="get_message_inbox">Get Message Inbox</string>
    <string name="push_templates">Push Templates</string>
    <string name="addedtocart">ATC</string>
    <string name="charged">Charged</string>
    <string name="addcartMultivalue">Add Cart</string>
    <string name="coupon_code">COUPON CODE</string>
    <string name="logo">logo</string>
    <string name="showpush">Copy Coupon Push</string>
    <string name="navigate_to_inapp">Navigate to InApp</string>
    <string name="welcome_ct">Welcome CT!</string>
    <string name="label_finish">Finish\n</string>
    <string name="navigate_to_coachmark">Navigate to Coachmark</string>
    <string name="spin_the_wheel">Spin The wheel</string>
    <string name="scratch_card">Scratch Card</string>
    <string name="feeedback_and_survey">Feedback and \n Survey</string>
    <string name="youtube_video">Youtube Video</string>
    <string name="fullscreen_with_carousel">Fullscreen with \nCarousel</string>
    <string name="card_with_text_and_cta">Card with Text\n and CTA</string>
    <string name="copy_coupon_code">Copy Coupon\n Code</string>
    <string name="bottom_corner_inapp">Bottom Corner\n InApp</string>
    <string name="gif_at_footer">GIF at Footer</string>
    <string name="bottom_sheet_carousel">Bottom Sheet\n Carousel</string>
    <string name="full_screen_gif">Full Screen GIF</string>
    <string name="gif_push">Gif Push</string>
    <string name="pip_video">PIP Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="native_display">Navigate to Native Display</string>
    <string name="push">Navigate to Push</string>
    <string name="native_display_templates">Native Display templates</string>
    <string name="navigate_to_tooltips">Navigate to Tooltips</string>
    <string name="pip_native_display">PIP Native Display</string>
    <string name="navigate_to_spotlights">Navigate to Spotlights</string>
    <string name="lottie_native_display">Lottie Player</string>
    <string name="render_pip">Render PiP</string>
</resources>