<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NativeDisplayActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/native_display_templates"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <Button
        android:id="@+id/open_coach_mark_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/navigate_to_coachmark"
        app:layout_constraintBottom_toTopOf="@+id/pip_native_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_story"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/open_tooltips_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/navigate_to_tooltips"
        app:layout_constraintBottom_toTopOf="@+id/open_coach_mark_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_story"
        app:layout_constraintVertical_bias="0.859"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/open_spotlights_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/navigate_to_spotlights"
        app:layout_constraintBottom_toTopOf="@+id/open_tooltips_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_story"
        app:layout_constraintVertical_bias="0.859"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/pip_native_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/pip_native_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_coach_mark_activity" />

    <FrameLayout
        android:id="@+id/pip_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    </FrameLayout>

<!--    <FrameLayout-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:id="@+id/pip_view"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="500dp"-->
<!--        android:elevation="10dp"-->
<!--        android:visibility="gone"-->
<!--        android:background="@android:color/black"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <VideoView-->
<!--            android:id="@+id/video_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/btn_play_pause"-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_gravity="bottom|center_horizontal"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:src="@android:drawable/ic_media_play" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/btn_close"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_gravity="top|end"-->
<!--            android:layout_margin="8dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:src="@android:drawable/ic_menu_close_clear_cancel" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/btn_mute"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_gravity="top|start"-->
<!--            android:layout_margin="8dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:src="@android:drawable/ic_lock_silent_mode" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/btn_expand"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_margin="8dp"-->
<!--            android:layout_gravity="bottom|end"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:src="@drawable/expand_video_icon"-->
<!--            android:contentDescription="Expand" />-->
<!--    </FrameLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>